style.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    font-family: Arial, sans-serif;
    background-color: #F9FAFB;
}

.wrapper {
    display: flex;
    height: 100vh;
    align-items: center;
    justify-content: center;
}

.greeting {
    font-size: 1.3rem;
    font-weight: 700;
    padding: 4rem 3rem 0rem 3rem;
}

.form-container {
    background-color: white;
    height: 300px;
    width: 100%;
    margin-top: 2rem;
    margin-bottom: 2rem;
}

.left {
    background-image: url("fern.png");
    background-position: center;
    background-repeat: no-repeat;
    height: 100vh;
    min-width: 40%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: column;
}

.odin-overlay {
    height: 200px;
    background-color: black;
    opacity: 0.5;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 35%;
}

.odin {
    max-height: 100%;
    max-width: 100%;
    text-align: center;
}

#odin-text {
    font-family: "Skranji", sans-serif;
    font-size: 3em;
    color: white;
}

.right {
    background-color: #f1f1f1;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    min-width: 60%;
    flex-wrap: wrap;
}

.photo-credit {
    color: white;
}

button.cta {
    background-color: #596D48;
    color: white;
    padding: 12px 50px;
    text-align: center;
    border-radius: 5px;
    font-weight: bolder;
}

.cta-container {
    /* display: flex;
    flex-direction: column;
    justify-content: flex-start; */
}

